# list-processor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  cmake_install.cmake  compile.sh  compile_info.sh  eddy.c  eddy_interpreter.c  eddy_lexer.c  eddy_lexer_pretty_printer.c  interpreter  interpreter.c  lexer.c  lexer_pretty_printer.c  list_processor.c  main.c  my_module.c  program  program.eddy  program.out  stream_processor.c  syntax.c  tuple.nama  tuple.nama.flat  tuple.naml
.github/workflows/: cmake.yml
eddy/: add.eddy  add2.eddy  dog.eddy  fused.eddy  mul.eddy  mul2.eddy  sub.eddy
eddy/base/: arithmetic.c  control.c  io.c  logic.c  main.c  relational.c  string.c
examples/: echo.edl  gcd.edl  get_set.edl  get_set_ast.json  get_set_ast_flat.json
include/eddy/: eddy.h
include/list_processor/: list_processor.h
include/stream_processor/: stream_processor.h
module/: arithmetic.c  control.c  env.c  io.c  logic.c  main.c  module.c  relational.c  string.c
module/eddy/: arithmetic.c  control.c  io.c  logic.c  main.c  relational.c  string.c
prog/: program.lex  program.src
resources/: o.stream  program.json  simple.json
test/: README.md  compile.sh  compile_info.sh  docs  interpreter  report.awk  run
test/test-add-2/: README.md  prog
test/test-add-3/: README.md  prog
test/test-add-4/: README.md  prog
test/test-arithmetic-add-2/: README.md  lex.out  prog  syntax.out
test/test-arithmetic-add-3/: README.md  lex.out  prog  syntax.out
test/test-arithmetic-add-4/: README.md  lex.out  prog  syntax.out
test/test-arithmetic-div-2/: README.md  human  lex.out  prog  syntax.out
test/test-arithmetic-div-3/: README.md  human  lex.out  prog  syntax.out
test/test-arithmetic-div-4/: README.md  human  lex.out  prog  syntax.out
test/test-arithmetic-mul-2/: README.md  lex.out  prog  syntax.out
test/test-arithmetic-mul-3/: README.md  human  lex.out  prog  syntax.out
test/test-arithmetic-mul-4/: README.md  human  lex.out  prog  syntax.out
test/test-arithmetic-sub-2/: README.md  lex.out  prog  syntax.out
test/test-arithmetic-sub-3/: README.md  lex.out  prog  syntax.out
test/test-arithmetic-sub-4/: README.md  human  lex.out  prog  syntax.out
test/test-control-if-else/: README.md  human  lex.out  prog  syntax.out
test/test-control-if-eq/: README.md  lex.out  prog  syntax.out
test/test-control-while/: README.md  lex.out  prog  syntax.out
test/test-example-hello_world/: README.md  lex.out  prog  syntax.out
test/test-function-ret-1/: README.md  lex.out  prog  syntax.out
test/test-function-ret-2/: README.md  lex.out  prog  syntax.out
test/test-function-ret-param/: README.md  lex.out  prog  syntax.out
test/test-fused-2/: README.md  human  lex.out  prog  syntax.out
test/test-fused-3/: README.md  lex.out  prog  syntax.out
test/test-fused-4/: README.md  human  lex.out  prog  syntax.out
test/test-hello-world/: prog
test/test-io-read/: README.md  prog
test/test-logic-and-2/: README.md  human  lex.out  prog  syntax.out
test/test-logic-and-3/: README.md  lex.out  prog  syntax.out
test/test-logic-and-4/: README.md  lex.out  out.i  prog  syntax.out
test/test-logic-or-2/: README.md  lex.out  prog  syntax.out
test/test-logic-or-3/: README.md  lex.out  prog  syntax.out
test/test-logic-or-4/: README.md  lex.out  out.i  prog  syntax.out
test/test-mul-2/: README.md
test/test-mul-3/: README.md
test/test-mul-4/: README.md
test/test-product-of-sums-2/: README.md  prog
test/test-product-of-sums-3/: README.md
test/test-product-of-sums-4/: README.md
test/test-product_of_sums-2/: README.md  human  lex.out  prog  syntax.out
test/test-product_of_sums-3/: README.md  human  lex.out  prog  syntax.out
test/test-product_of_sums-4/: README.md  human  lex.out  prog  syntax.out
test/test-read/: README.md  lex.out  out.i  prog  syntax.out
test/test-relational-eq-bool/: README.md  lex.out  prog  syntax.out
test/test-relational-eq-integer/: README.md  lex.out  out.i  prog  syntax.out
test/test-relational-eq-string/: README.md  lex.out  prog  syntax.out
test/test-relational-gt-bool/: README.md  lex.out  prog  syntax.out
test/test-relational-gt-integer/: README.md  lex.out  prog  syntax.out
test/test-relational-gt-string/: README.md  lex.out  prog  syntax.out
test/test-relational-gte-bool/: README.md  lex.out  prog  syntax.out
test/test-relational-gte-integer/: README.md  lex.out  prog  syntax.out
test/test-relational-gte-string/: README.md  lex.out  prog  syntax.out
test/test-relational-lt-bool/: README.md  lex.out  prog  syntax.out
test/test-relational-lt-integer/: README.md  lex.out  prog  syntax.out
test/test-relational-lt-string/: README.md  lex.out  out.i  prog  syntax.out
test/test-relational-lte-bool/: README.md  lex.out  prog  syntax.out
test/test-relational-lte-integer/: README.md  lex.out  out.i  prog  syntax.out
test/test-relational-lte-string/: README.md  lex.out  prog  syntax.out
test/test-relational-neq-bool/: README.md  lex.out  prog  syntax.out
test/test-relational-neq-integer/: README.md  exp  lex.out  prog  syntax.out
test/test-relational-neq-string/: README.md  lex.out  prog  syntax.out
test/test-sum-of-products-2/: README.md
test/test-sum-of-products-3/: README.md
test/test-sum_of_products-2/: README.md  human  lex.out  prog  syntax.out
test/test-sum_of_products-3/: README.md  human  lex.out  prog  syntax.out
test/test-sum_of_products-4/: README.md  human  lex.out  prog  report.md  syntax.out
test/test-vector-add-2/: README.md  prog
